--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,7 +23,7 @@
                 <button type="submit" class="btn-login">Login</button>
             </form>
             <div class="register-link">
-                Don't have an account? <a href="register.html">Register here</a>
+                Don't have an account? <a href="Register.html">Register here</a>
             </div>
         </div>
     </div>
